# EnglishPosTagger-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: DummyPosTaggerTest.c  HmmPosTaggerTest.c  NaiveTaggerTest.c
src/: CMakeLists.txt  DummyPosTagger.c  DummyPosTagger.h  HmmPosTagger.c  HmmPosTagger.h  NaivePosTagger.c  NaivePosTagger.h  PosTaggedCorpus.c  PosTaggedCorpus.h  PosTaggedWord.c  PosTaggedWord.h
