cmake_minimum_required(VERSION 3.23)
project(PosTagger)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(corpus_c REQUIRED)
find_package(hmm_c REQUIRED)

add_library(PosTagger src/PosTaggedWord.c src/PosTaggedWord.h src/PosTaggedCorpus.c src/PosTaggedCorpus.h src/DummyPosTagger.c src/DummyPosTagger.h src/NaivePosTagger.c src/NaivePosTagger.h src/HmmPosTagger.c src/HmmPosTagger.h)
target_link_libraries(PosTagger corpus_c::corpus_c hmm_c::hmm_c)
add_executable(DummyPosTaggerTest src/PosTaggedWord.c src/PosTaggedWord.h src/PosTaggedCorpus.c src/PosTaggedCorpus.h src/DummyPosTagger.c src/DummyPosTagger.h Test/DummyPosTaggerTest.c)
target_link_libraries(DummyPosTaggerTest corpus_c::corpus_c hmm_c::hmm_c)
add_executable(NaiveTaggerTest src/PosTaggedWord.c src/PosTaggedWord.h src/PosTaggedCorpus.c src/PosTaggedCorpus.h src/DummyPosTagger.c src/DummyPosTagger.h src/NaivePosTagger.c src/NaivePosTagger.h Test/NaiveTaggerTest.c Test/NaiveTaggerTest.c)
target_link_libraries(NaiveTaggerTest corpus_c::corpus_c hmm_c::hmm_c)
add_executable(HmmPosTaggerTest src/PosTaggedWord.c src/PosTaggedWord.h src/PosTaggedCorpus.c src/PosTaggedCorpus.h src/DummyPosTagger.c src/DummyPosTagger.h src/NaivePosTagger.c src/NaivePosTagger.h src/HmmPosTagger.c src/HmmPosTagger.h Test/HmmPosTaggerTest.c)
target_link_libraries(HmmPosTaggerTest corpus_c::corpus_c hmm_c::hmm_c)
